fix change detection

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,1 @@
-<app-login-form (saveForm)="login($event)"></app-login-form>
+<app-login-form (saveForm)="saveFromHandler($event)"></app-login-form>
